Fixed nav on mobile

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -59,13 +59,14 @@
   }
 
   @include media-query($on-palm) {
-    position: left;
+    position: absolute;
     top: 9px;
-    right: $spacing-unit / 2;
+    left: $spacing-unit / 2;
     background-color: $background-color;
     border: 1px solid $grey-color-light;
     border-radius: 5px;
     text-align: right;
+    float: left;
 
     label[for="nav-trigger"] {
       display: block;
@@ -78,7 +79,7 @@
 
     .menu-icon {
       display: block;
-      float: left;
+      float: right;
       width: 36px;
       height: 26px;
       line-height: 0;
@@ -86,7 +87,7 @@
       text-align: center;
 
       > svg path {
-        fill: $grey-color-dark;
+        fill: $accent-color;
       }
     }
 
